# python-poetry-monorepo

./: .gitignore  README.md  nx.json  package-lock.json  package.json  pyproject.toml
